# KumaRenderer

./: CMakeLists.txt  README.md  TODO.txt
.github/workflows/: build.yml  cmake-multi-platform.yml  test.yml  vcpkg.yml
examples/: CMakeLists.txt
examples/cube/: main.cpp
examples/cubes/: CMakeLists.txt  main.cpp
examples/cubes/resources/shaders/: CubeShader.frag
examples/framebuffers/: CMakeLists.txt  main.cpp
examples/framebuffers/resources/shaders/: ScreenShader.frag  ScreenShader.vert
examples/lighting/: CMakeLists.txt  main.cpp
examples/lighting/resources/shaders/: Shader.frag  Shader.vert
examples/lighting/resources/textures/: specular.png~
examples/model/: CMakeLists.txt  main.cpp
examples/shadows/: CMakeLists.txt  main.cpp
examples/shadows/resources/shaders/: DebugShader.frag  DepthShader.vert  Shader.frag  Shader.vert
examples/text/: CMakeLists.txt  main.cpp
examples/text/resources/shaders/: Text.frag  Text.vert
include/: Camera.hpp  Light.hpp  MathUtil.hpp  Mesh.hpp  Shader.hpp  Vec3.hpp
include/KumaGL/: Font.hpp  Framebuffer.hpp  GLObject.hpp  KumaGL.hpp  Mat4.hpp  Material.hpp  MathUtil.hpp  Mesh.hpp  Model.hpp  Renderbuffer.hpp  Shader.hpp  Texture.hpp  Transform.hpp  VAO.hpp  VBO.hpp  Vec3.hpp
include/KumaGL/glad/: gl.h
include/core/: Mat4.hpp  Material.hpp  MathUtil.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  Transform.hpp
include/model/: Model.hpp
include/text/: Font.hpp
src/: CMakeLists.txt  Font.cpp  Framebuffer.cpp  GLObject.cpp  Mat4.cpp  Mesh.cpp  Model.cpp  Renderbuffer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Vec3.cpp
src/core/: Mesh.cpp  Mesh.hpp  Shader.cpp  Texture.cpp  Transform.hpp
src/math/: Mat4.hpp  MathUtil.hpp  Transform.hpp  Vec3.hpp
src/model/: Model.cpp  Model.hpp
src/text/: Font.cpp
tests/: CMakeLists.txt  MathTests.hpp  main.cpp
